Chore: Fix Navbar Icon on Dark Mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -203,10 +203,6 @@ html[data-theme='light'] .navbar {
   font-weight: 400;
 }
 
-html[data-theme='dark'] .navbar__logo {
-  filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(337deg) brightness(112%) contrast(104%);
-}
-
 .docusaurus-highlight-code-line {
   background-color: rgb(72, 77, 91);
   display: block;
